Add export to json

--- a/load_data_from_api.ipynb
+++ b/load_data_from_api.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,19 +412,19 @@
       "\t 2020-03-26  \t   \t 2020-03-26\n",
       "230 update สีเขียว    --> สีเหลือง\n",
       "\t 2020-03-23  \t   \t 2020-03-25\n",
-      "1327 update สีเขียว    --> สีเหลือง\n",
+      "580 update สีเขียว    --> สีเหลือง\n",
       "\t 2020-03-23  \t   \t 2020-03-25\n",
-      "1398 update สีเขียว    --> สีเหลือง\n",
+      "651 update สีเขียว    --> สีเหลือง\n",
       "\t 2020-03-23  \t   \t 2020-03-24\n",
-      "1432 update สีเหลือง   --> สีส้ม\n",
+      "685 update สีเหลือง   --> สีส้ม\n",
       "\t 2020-03-23  \t   \t 2020-03-26\n",
-      "1432 update สีส้ม      --> สีแดง\n",
+      "685 update สีส้ม      --> สีแดง\n",
       "\t 2020-03-26  \t   \t 2020-03-26\n",
-      "1433 update สีเขียว    --> สีเหลือง\n",
+      "686 update สีเขียว    --> สีเหลือง\n",
       "\t 2020-03-23  \t   \t 2020-03-24\n",
-      "1442 update สีเขียว    --> สีเหลือง\n",
+      "695 update สีเขียว    --> สีเหลือง\n",
       "\t 2020-03-24  \t   \t 2020-03-24\n",
-      "1876 update สีเหลือง   --> สีแดง\n",
+      "1929 update สีเหลือง   --> สีแดง\n",
       "\t 2020-03-24  \t   \t 2020-03-26\n",
       "214 update สีเขียว    --> สีเหลือง\n",
       "\t 2020-03-27  \t   \t 2020-03-27\n"
@@ -437,11 +437,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert Graph to JSON"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_node_info(node, gr):\n",
+    "    if 'Location' in gr:\n",
+    "        return {\"id\": node['id'], \n",
+    "                \"group\": gr,\n",
+    "                \"label\": node['name'], \n",
+    "               }\n",
+    "    elif 'Person' in gr:\n",
+    "        return {\"id\": node['id'],\n",
+    "                \"group\": gr, \n",
+    "                \"label\": node['id'],\n",
+    "                \"color\": node['color'],\n",
+    "                \"type\" : node['type'],\n",
+    "                \"age\" : node['age'],\n",
+    "                \"org\" : node['org'],\n",
+    "                \"emptype\" : node['emptype'],\n",
+    "                \"gender\" : node['gender'],\n",
+    "                \"blood\" : node['blood'],\n",
+    "                \"ismedstaff\" : node['ismedstaff'],\n",
+    "                \"bloodres\" : node['bloodres'],\n",
+    "                \"province\" : node['province']\n",
+    "               }\n",
+    "    else:\n",
+    "        raise Exceptions('Unknown Label')\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "def get_edge_info(edge, p_info, m_info):\n",
+    "    if edge.type == 'WENT_TO':\n",
+    "        return {\"from\": p_info[\"id\"], \"to\": m_info[\"id\"], \"label\": edge.type, \"start\":edge[\"start\"], \"end\":edge[\"end\"]}\n",
+    "    else:\n",
+    "        return {\"from\": p_info[\"id\"], \"to\": m_info[\"id\"], \"label\": edge.type}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "with driver.session() as session:\n",
+    "    result = session.run(\"\"\"MATCH (p:Person)\n",
+    "                            OPTIONAL MATCH (p:Person)-[a]->(m)\n",
+    "                            RETURN  p, labels(p), a, m, labels(m);\"\"\")\n",
+    "\n",
+    "print(result.summary().result_available_after)\n",
+    "print(result.summary().result_consumed_after)\n",
+    "    \n",
+    "nodes = []\n",
+    "edges = []\n",
+    "physics = True\n",
+    "\n",
+    "for record in result:\n",
+    "    p_info = get_node_info(record['p'], record['labels(p)'][0])\n",
+    "    \n",
+    "    if p_info not in nodes:\n",
+    "        nodes.append(p_info)\n",
+    "         \n",
+    "    if record['m']:\n",
+    "        m_info = get_node_info(record['m'], record['labels(m)'][0])\n",
+    "        if m_info not in nodes:\n",
+    "            nodes.append(m_info)\n",
+    "\n",
+    "        edges.append(get_edge_info(record['a'], p_info, m_info))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "# json.dumps({'nodes':nodes, 'edges':edges})\n",
+    "with open('cc.json', 'w') as outfile:\n",
+    "    json.dump({'nodes':nodes, 'edges':edges}, outfile)"
+   ]
   }
  ],
  "metadata": {
